# static-server

./: CMakeLists.txt
src/: main.c
vendors/mongoose/: CMakeLists.txt
